tests/ui/discord-frontend/command_macro/expected_boolean_literal.stderr
error: expected boolean
  --> tests/ui/discord-frontend/command_macro/expected_boolean_literal.rs:32:24
   |
LL |     interaction_only = "true",
   |                        ^^^^^^

error: aborting due to 1 previous error

